--- a/styled_portofolio.html
+++ b/styled_portofolio.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
     <h1 class="text-center">Selamat Datang di Portofolio Saya</h1>
-    <p class="intro">Nama : Gusti Muhammad Rakha Hadiwijaya</p>
+    <p class="intro">Nama : Faris Abqari</p>
     <p class="intro">Profesi : Web Developer</p>
 
     <h2>Pengalaman Kerja</h2>
