--- a/potopoliolengkap.html
+++ b/potopoliolengkap.html
@@ -78,7 +78,7 @@ function ubahBackground() {
                 <div class="title-bar">Profil</div>
 
                 <div class="p-4 text-center">
-                    <img src="f:\Youtube\Apa iyah.jpg" class="profile-img">
+                    <img src="YAHAHA.webp" class="profile-img">
 
 
                     <h3 class="mt-3">Faris Abqari</h3>
